src/pages/User/History/components/TextEditor/index.scss
@import '~/src/_variables';

.text-editor {
  background-color: white;
  border: 1px solid $secondary-font-color;
  margin: 1em;
  padding: 1.5em;

  font-size: 1.3em;
  font-family: Verdana, Geneva, Tahoma, sans-serif;

  &__toolbar {
    position: relative;
    padding: 1px 18px 17px;
    margin: 0 -20px;
    border-bottom: 2px solid #eee;
    margin-bottom: 20px;

    &>* {
      display: inline-block;
    }

    &>*+* {
      margin-left: 15px;
    }
  }

  &__button {
    cursor: pointer;
    border-radius: 2px;

    &:hover {
      filter: brightness(85%)
    }
  }

  code {
    background-color: rgb(222, 222, 222);
    padding: 0.2em 0.4em;
    border-radius: 0.2em;

    >* {
      color: rgb(244, 159, 159);
    }
  }

}

